@@ -4,10 +4,12 @@
 elgg.provide("elgg.pages_tools");
 elgg.provide("elgg.pages_tools.tree");
 
-elgg.pages_tools.tree.init = function(){
+elgg.pages_tools.tree.init = function() {
+
+	// initialize tree
 	$tree = $('#pages-tools-navigation');
 
-	if($tree.length){
+	if ($tree.length) {
 		$tree.tree({
 			rules: {
 				multiple: false,
@@ -17,7 +19,7 @@ elgg.pages_tools.tree.init = function(){
 				theme_name: "classic"
 			},
 			callback: {
-				onload: function(tree){
+				onload: function(tree) {
 					$selected_branch = $tree.find('a[href="' + window.location.href + '"]').parent('li');
 
 					tree.select_branch($selected_branch);
@@ -26,24 +28,24 @@ elgg.pages_tools.tree.init = function(){
 					$tree.next().hide();
 					$tree.show();
 				},
-				onselect: function(node, tree){
+				onselect: function(node, tree) {
 					var href = $(node).find('a:first').attr("href");
 
 					if(window.location.href != href){
 						window.location.href = href;
 					}
 				},
-				beforemove: function(node, ref_node, type, tree_obj){
+				beforemove: function(node, ref_node, type, tree_obj) {
 					return !$(node).hasClass('no-edit');
 				},
-				onmove: function(node, ref_node, type, tree_obj, rb){
+				onmove: function(node, ref_node, type, tree_obj, rb) {
 					parent = tree_obj.parent(node);
 					parent_guid = elgg.pages_tools.tree.get_guid_from_tree_element(parent);
 					
 					children = tree_obj.children(parent);
 					order = new Array();
 
-					$.each(children, function(index, elm){
+					$.each(children, function(index, elm) {
 						order.push(elgg.pages_tools.tree.get_guid_from_tree_element(elm));
 					});
 					
@@ -57,10 +59,28 @@ elgg.pages_tools.tree.init = function(){
 			}
 		});
 	}
+
+	// search for edit form with lock timer
+	if ($("#pages-tools-edit-guid").length) {
+		setTimeout(elgg.pages_tools.edittimer, 30000);
+	}
 }
 
 elgg.pages_tools.tree.get_guid_from_tree_element = function(element){
 	return $(element).find('a:first').attr('rel');
+}
+
+elgg.pages_tools.edittimer = function() {
+
+	var guid = $("#pages-tools-edit-guid").val();
+	elgg.action("pages_tools/update_edit_notice", {
+		data: {
+			guid: guid
+		},
+		success: function() {
+			setTimeout(elgg.pages_tools.edittimer, 30000);
+		}
+	});
 }
 
 elgg.pages_tools.init = function(){
